# moqui_v2

./: CMakeLists.txt  Dev_plan_250926.txt  Doxyfile  README.md  code_structure.md  tps_env.cpp
base/: mqi_aperture.hpp  mqi_aperture3d.hpp  mqi_beam_module.hpp  mqi_beam_module_ion.hpp  mqi_beam_module_rt.hpp  mqi_beamlet.hpp  mqi_beamline.hpp  mqi_beamsource.hpp  mqi_cli.hpp  mqi_common.hpp  mqi_coordinate_transform.hpp  mqi_ct.hpp  mqi_cuda_stubs.hpp  mqi_dataset.hpp  mqi_distributions.hpp  mqi_error_check.hpp  mqi_file_handler.hpp  mqi_fippel_physics.hpp  mqi_geometry.hpp  mqi_grid3d.hpp  mqi_hash_table.hpp  mqi_interaction.hpp  mqi_io.hpp  mqi_material.hpp  mqi_math.hpp  mqi_matrix.hpp  mqi_node.hpp  mqi_p_ionization.hpp  mqi_physics_constants.hpp  mqi_physics_list.hpp  mqi_po_elastic.hpp  mqi_po_inelastic.hpp  mqi_pp_elastic.hpp  mqi_rangeshifter.hpp  mqi_rect3d.hpp  mqi_relativistic_quantities.hpp  mqi_roi.hpp  mqi_scorer.hpp  mqi_sparse_io.hpp  mqi_threads.hpp  (+9 more)
base/distributions/: mqi_const_1d.hpp  mqi_norm_1d.hpp  mqi_pdfMd.hpp  mqi_phsp6d.hpp  mqi_phsp6d_fanbeam.hpp  mqi_phsp6d_ray.hpp  mqi_phsp6d_uniform.hpp  mqi_uni_1d.hpp
base/environments/: mqi_phantom_env.hpp  mqi_tps_env.hpp  mqi_xenvironment.hpp
base/materials/: material_table_data.hpp  mqi_material.hpp  mqi_material_ct.hpp  mqi_patient_materials.hpp
base/scorers/: mqi_scorer_energy_deposit.hpp
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classmqi_1_1air__t-members.html  classmqi_1_1air__t.js  classmqi_1_1aperture-members.html  classmqi_1_1aperture.html  classmqi_1_1aperture3d.html  classmqi_1_1aperture3d__coll__graph.dot  classmqi_1_1aperture3d_a058cfd70936fab2c7107c15e16111303_cgraph.dot  classmqi_1_1aperture3d_a375c0552dac856c4335ac94fc1eb1e80_cgraph.dot  classmqi_1_1aperture3d_a5121aed9cacae9d79b464f26c5cc7ca5_icgraph.dot  classmqi_1_1aperture3d_acb5df7525c418c9c9426ae7546167195_icgraph.dot  classmqi_1_1aperture__inherit__graph.dot  classmqi_1_1aperture_a45b6d31bcf941d5286bfd2d0f0d55c90_cgraph.dot  classmqi_1_1aperture_a471434d385a521aa705d996d53376033_cgraph.dot  classmqi_1_1beam__module.html  classmqi_1_1beam__module.js  classmqi_1_1beam__module__inherit__graph.dot  classmqi_1_1beam__module__ion.js  classmqi_1_1beam__module__ion__coll__graph.dot  classmqi_1_1beam__module__rt-members.html  classmqi_1_1beam__module__rt.js  classmqi_1_1beamlet.html  classmqi_1_1beamlet__coll__graph.dot  classmqi_1_1beamlet_a95722b92f59cbc2600b5391fe947f565_cgraph.dot  classmqi_1_1beamline.js  classmqi_1_1beamline_a0005e7646e09139dedfad76f8a57dbdb_icgraph.dot  classmqi_1_1beamline_a6103b5380a08772e0f25b98482db46b1_icgraph.dot  classmqi_1_1beamsource_a0451306c28b7751f418880d7a82d7ed5_icgraph.dot  classmqi_1_1beamsource_a13471b5c0eb3fff03bd5b60ee2892361_cgraph.dot  classmqi_1_1beamsource_a187add0373c2eeecba666a2bebb66f3c_cgraph.dot  classmqi_1_1beamsource_a3fb81fc91b2aba2f7b3d97f1185c9a29_icgraph.dot  classmqi_1_1beamsource_a8cb53a42506de99381a0eee29f6dbc35_icgraph.dot  classmqi_1_1beamsource_ab5d183f2c95b2ac544bc059c05564f4e_cgraph.dot  classmqi_1_1brass__t__coll__graph.dot  classmqi_1_1brass__t_aebc5b4fbf22f749f6d0e8f2fedc98f31_cgraph.dot  classmqi_1_1const__1d.html  classmqi_1_1const__1d.js  classmqi_1_1const__1d__coll__graph.dot  (+590 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_f.js  enums_1.js  enums_2.js  enums_3.js  enums_6.js  enumvalues_10.js  enumvalues_13.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  enumvalues_c.js  enumvalues_e.js  files_1.js  files_2.js  (+37 more)
htmls/: classes.html  classmqi_1_1air__t.html  classmqi_1_1air__t__inherit__graph.dot  classmqi_1_1air__t_a3795104ec912369c75ee1917e2d3839f_cgraph.dot  classmqi_1_1aperture.js  classmqi_1_1aperture3d-members.html  classmqi_1_1aperture3d.js  classmqi_1_1aperture3d__inherit__graph.dot  classmqi_1_1aperture3d_a03022a13cc46980e3e756a4f96435878_cgraph.dot  classmqi_1_1aperture3d_a11fc10bf93e1ed965a978237c85a9e53_cgraph.dot  classmqi_1_1aperture3d_a2ef228685ebc5a26fd577c4ae0faa4ee_cgraph.dot  classmqi_1_1aperture3d_a5121aed9cacae9d79b464f26c5cc7ca5_cgraph.dot  classmqi_1_1aperture3d_a62ae473dd8689634b975a7d94361f1e9_cgraph.dot  classmqi_1_1aperture3d_a92ce44dcc090ddcec260f8da1fa8d980_cgraph.dot  classmqi_1_1aperture3d_ad62b04b017b0eba661bdd682e7a3fbf3_cgraph.dot  classmqi_1_1aperture3d_aebc7e425d35cce530e51991645f371db_cgraph.dot  classmqi_1_1aperture__coll__graph.dot  classmqi_1_1beam__module-members.html  classmqi_1_1beam__module__coll__graph.dot  classmqi_1_1beam__module__ion-members.html  classmqi_1_1beam__module__ion.html  classmqi_1_1beam__module__ion__inherit__graph.dot  classmqi_1_1beam__module__ion_a08195b271e0d2a43c5fdf38805cbbaaf_icgraph.dot  classmqi_1_1beam__module__ion_a374f32f43135be6cdbd269301c295427_cgraph.dot  classmqi_1_1beam__module__rt.html  classmqi_1_1beam__module__rt__coll__graph.dot  classmqi_1_1beam__module__rt__inherit__graph.dot  classmqi_1_1beam__module__rt_a609e05e79570bebaa520cd055b65cde9_cgraph.dot  classmqi_1_1beam__module_ae50d4cdf2f7012ca3059cfdef3e30fee_icgraph.dot  classmqi_1_1beamlet-members.html  classmqi_1_1beamlet.js  classmqi_1_1beamlet_aa74720723f8d0f45e5c8b2422c33a894_icgraph.dot  classmqi_1_1beamlet_adbafbda3220e1373d9c7eafb0809ad77_icgraph.dot  classmqi_1_1beamline-members.html  classmqi_1_1beamline.html  classmqi_1_1beamsource-members.html  classmqi_1_1beamsource.html  classmqi_1_1beamsource.js  classmqi_1_1beamsource_a0451306c28b7751f418880d7a82d7ed5_cgraph.dot  classmqi_1_1beamsource_a187add0373c2eeecba666a2bebb66f3c_icgraph.dot  (+647 more)
htmls/search/: all_0.js  all_13.js  (+71 more)
kernel_functions/: mqi_download_data.hpp  mqi_kernel_functions.hpp  mqi_print_data.hpp  mqi_transport.hpp  mqi_upload_data.hpp  mqi_variables.hpp
treatment_machines/: mqi_treatment_machine_smc_gtr1.hpp  mqi_treatment_machine_smc_gtr2.hpp  spline_interp.hpp
